BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Directory_vod__c.object
<CustomObject>
    <description>Used to associate records to a folder hierarchy</description>
    <fields>
        <fullName>Display_Order_vod__c</fullName>
        <description>Indicates what order the folder should be displayed. If NULL, ABC order is used.</description>
        <label>Display Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID of the Directory. Used for Vault Integration and CLM Presentation migration</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Level_vod__c</fullName>
        <description>Describes what level the directory is at. Read only. Auto-populated by trigger.</description>
        <label>Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Directory_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References the directory one level up</description>
        <label>Parent Directory</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>((1 AND 2) OR 3) AND 4</booleanFilter>
            <errorMessage>Value does not exist or does not match filter criteria</errorMessage>
            <filterItems>
                <field>Directory_vod__c.Level_vod__c</field>
                <operation>lessThan</operation>
                <value>4</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CLM_vod</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>CLM_vod</value>
            </filterItems>
            <filterItems>
                <field>Directory_vod__c.RecordTypeId</field>
                <operation>equals</operation>
                <valueField>$Source.RecordTypeId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Directory_vod__c</referenceTo>
        <relationshipLabel>Directories</relationshipLabel>
        <relationshipName>Directories_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Directory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Directory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Directories</pluralLabel>
    <recordTypes>
        <fullName>CLM_vod</fullName>
        <active>true</active>
        <description>Used for CLM Presentations</description>
        <label>CLM_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>